WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82989
Auto-size may not work on first load
https://bugs.webkit.org/show_bug.cgi?id=82989
Summary
Auto-size may not work on first load
Andrei Burago
Reported
2012-04-02 17:46:46 PDT
Auto-size may not work on first load
Attachments
Patch
(2.42 KB, patch)
2012-04-02 17:51 PDT
,
Andrei Burago
no flags
Details
Formatted Diff
Diff
Patch
(3.28 KB, patch)
2012-04-03 11:15 PDT
,
Andrei Burago
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ec2-cq-02
(7.02 MB, application/zip)
2012-04-03 12:06 PDT
,
WebKit Review Bot
no flags
Details
Archive of layout-test-results from ec2-cr-linux-01
(6.88 MB, application/zip)
2012-04-03 13:03 PDT
,
WebKit Review Bot
no flags
Details
Patch
(5.07 KB, patch)
2012-04-04 14:30 PDT
,
Andrei Burago
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Andrei Burago
Comment 1
2012-04-02 17:51:50 PDT
Created
attachment 135246
[details]
Patch
WebKit Review Bot
Comment 2
2012-04-02 17:55:41 PDT
Attachment 135246
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andrei Burago
Comment 3
2012-04-02 17:59:22 PDT
Repro steps: 1) Run Chrome and Install
https://chrome.google.com/webstore/detail/gighmmpiobklfepjocnamgkkbiglidom
2.) left-click on the AdblockForChrome toolbar icon 3.) the pop-up menu is not completely to see. TESTS: Manually repeat the repro steps While layout is called from Document::implicitClose(), the tree does not seem to be ready. As soon as layout is called again for a different reason (activation, etc.) the layout results are back to normal. This patch makes sure that the autosize does not shrink the visible area because of this temporary change in layout results.
David Levin
Comment 4
2012-04-02 18:12:59 PDT
Comment on
attachment 135246
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=135246&action=review
>> Source/WebCore/ChangeLog:8 >> + No new tests. (OOPS!) > > You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5]
What style queue said.
> Source/WebCore/dom/Document.cpp:2382 > + m_processingLoadEvent = false;
There are two places where "return" is done above without setting this to false above. I wonder if we should use TemporaryChange here (although that can be tricky because where you want to do the reset isn't the end of a scope, so you either need to create a new scope, add a method to reset it early or allocate a TemporaryChange into an OwnPtr and then clear it here).
David Levin
Comment 5
2012-04-02 18:13:25 PDT
Thank you very much for working on this!
Andrei Burago
Comment 6
2012-04-03 11:15:39 PDT
Created
attachment 135370
[details]
Patch
David Levin
Comment 7
2012-04-03 11:18:46 PDT
Comment on
attachment 135370
[details]
Patch Thanks again!
WebKit Review Bot
Comment 8
2012-04-03 12:05:57 PDT
Comment on
attachment 135370
[details]
Patch Rejecting
attachment 135370
[details]
from commit-queue. New failing tests: fast/autoresize/turn-off-autoresize.html fast/autoresize/basic.html Full output:
http://queues.webkit.org/results/12320323
WebKit Review Bot
Comment 9
2012-04-03 12:06:02 PDT
Created
attachment 135385
[details]
Archive of layout-test-results from ec2-cq-02 The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: ec2-cq-02 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
WebKit Review Bot
Comment 10
2012-04-03 13:03:06 PDT
Comment on
attachment 135370
[details]
Patch
Attachment 135370
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/12325241
New failing tests: fast/autoresize/turn-off-autoresize.html fast/autoresize/basic.html
WebKit Review Bot
Comment 11
2012-04-03 13:03:11 PDT
Created
attachment 135403
[details]
Archive of layout-test-results from ec2-cr-linux-01 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-01 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Andrei Burago
Comment 12
2012-04-04 14:30:49 PDT
Created
attachment 135684
[details]
Patch
Andrei Burago
Comment 13
2012-04-04 18:10:19 PDT
Updated the patch. The previous version did not give the window a chance to shrink (if needed) when autosize was enabled on load.
WebKit Review Bot
Comment 14
2012-04-04 21:23:05 PDT
Comment on
attachment 135684
[details]
Patch Clearing flags on attachment: 135684 Committed
r113287
: <
http://trac.webkit.org/changeset/113287
>
WebKit Review Bot
Comment 15
2012-04-04 21:23:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug