Auto-size may not work on first load https://bugs.webkit.org/show_bug.cgi?id=82989

Patch by Andrei Burago <aburago@chromium.org> on 2012-04-04
Reviewed by David Levin.

No new tests. The only known repro scenario involves using chrome with a third-party extension,
which makes making a test out of it problematic.

* dom/Document.cpp:
(WebCore::Document::implicitClose):
* page/FrameView.cpp:
(WebCore::FrameView::autoSizeIfEnabled):

Canonical link: https://commits.webkit.org/100623@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113287 268f45cc-cd09-0410-ab3c-d52691b4dbfc